# gws2

./: .gitignore  pyproject.toml  requirements.txt  run_hypercorn.py  run_server.py  run_server_hypercorn.py  run_uvicorn.py  test_main.http
.github/workflows/: main.yml
files/: index.html
files/.well-known/: discord
files/apps/: chat.html
files/apps/chat/: script.js
files/shared/: Algebraic Structures.html  Automata Theory.html  COMP0003.html  COMP0011.html  COMP0147.html  First-order Logic.html  Formal Language & Grammar.html  Mathematical Induction.html  Modal Logic.html  PhysicsSyllabus.htm  Propositional Logic.html  algebraic structures.html  graphs.htm  how to do the regex thing.html  signature.md  signature.md.sig
files/shared/BusinessSyllabus_files/: filelist.xml  preview.wmf
files/shared/MathAASyllabus_files/: filelist.xml
files/shared/PhysicsSyllabus_files/: preview.wmf
files/shared/archive/IB/: BusinessSyllabus.htm  MathAASyllabus.htm
files/shared/archive/IB/MathAASyllabus_files/: preview.wmf
files/shared/archive/IB/PhysicsSyllabus_files/: filelist.xml
webserver/: __init__.py  __main__.py  httpsredirect.py  main.py  middleware.py  nullrouter.py  poller.py  run.py  staticdir.py  util.py
webserver/premade/: only_redirector.py  regular.py  with_redirector.py
webserver/templates/: list_dir.html
